--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   },
   "homepage": "https://github.com/greypsn/fullstack-javascript-project-46#readme",
   "dependencies": {
+    "@jest/globals": "^29.2.2",
     "commander": "^9.4.1",
+    "eslint": "^8.26.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "jest": "^29.2.2",
     "lodash": "^4.17.21"
-  },
-  "devDependencies": {
-    "jest": "^29.2.2"
   }
 }
