--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "gendiff": "bin/gendiff.js"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint index.js"
   },
   "repository": {
     "type": "git",
@@ -23,11 +24,14 @@
   "dependencies": {
     "@jest/globals": "^29.2.2",
     "commander": "^9.4.1",
-    "eslint": "^8.26.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "jest": "^29.2.2",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "eslint": "^8.26.0",
+    "eslint-watch": "^8.0.0"
   }
 }
