--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
     strategy:
       # Node versions list
       matrix:
-        node-version: [14.x]
+        node-version: [16.x]
 
     steps:
         # Check-out repository under GitHub workspace
@@ -35,7 +35,7 @@ jobs:
           cache: 'npm'
       - run: make install
       - run: make lint
-      - run: make test
+      - run: make test-coverage
       # - name: Test & publish code coverage
       #   # Publish code coverage on Code Climate
       #   # https://github.com/paambaati/codeclimate-action
