--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@hexlet/code",
   "type": "module",
   "version": "1.0.0",
-  "description": "[![Actions Status](https://github.com/greypsn/fullstack-javascript-project-46/workflows/hexlet-check/badge.svg)](https://github.com/greypsn/fullstack-javascript-project-46/actions)",
-  "main": "index.js",
+  "description": "Node.js boilerplate package",
+  "main": "src/index.js",
   "bin": {
     "gendiff": "bin/gendiff.js"
   },
