--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hexlet/code",
   "type": "module",
   "version": "1.0.0",
-  "description": "Node.js boilerplate package",
+  "description": "Node.js Difference Generator package",
   "main": "src/index.js",
   "bin": {
     "gendiff": "bin/gendiff.js"
